# VicsSearch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  TROUBLESHOOTING.md  WINDOWS_INSTALL.md  config.example.toml  pyproject.toml  run.sh
src/docsearch/: __init__.py  config.py
src/docsearch/api/: app.py
src/docsearch/api/routes/: __init__.py  documents.py  folders.py  index.py  rag.py  search.py  status.py
src/docsearch/cli/: main.py
src/docsearch/db/: connection.py  schema.sql
src/docsearch/extractors/: ocr_extractor.py  pdf_extractor.py
src/docsearch/indexer/: __init__.py  index_manager.py
src/docsearch/queue/: job_queue.py  worker.py
src/docsearch/rag/: config.py  embeddings.py  engine.py  llm.py  retriever.py  vector_store.py
src/docsearch/search/: query_parser.py  search_engine.py  snippets.py
src/docsearch/watcher/: folder_watcher.py
ui/: app.js  index.html  styles.css
